# pde_jet

./: .gitignore  CLAUDE.md  FISCHER_DECOMP.md  LICENSE  README.md  pyproject.toml
examples/: harnack.py  kato.py  optimizer_comparison.py  test_kato.py
pde_jet/: __init__.py  _constraints.py  _eigenfunction.py  _functionals.py  _harmonics.py  _jet.py  _kato.py  _operators.py  _optimize.py  _tensor.py
tests/: test_constraints.py  test_eigenfunction.py  test_functionals.py  test_harmonics.py  test_jet.py  test_kato.py  test_tensor.py
