[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pde_jet"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["jax", "jaxlib"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pde_jet*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
