[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "pde_jet"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["jax", "jaxlib"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pde_jet*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
